--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Firma internet seite</title>
+    <title>Firma internetseite</title>
 </head>
 <body>
-    <h1>Firma internet seite</h1>
-    <p>willkommen in unser firma internet seite</p>
+    <h1>Firma internetseite</h1>
+    <p>willkommen in unser Firma internetseite</p>
 </body>
 </html>
