--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
     <title>Firma internetseite</title>
 </head>
-<body>
+<header>
     <h1>Firma internetseite</h1>
-    <p>willkommen in unser Firma internetseite</p>
+    <nav> willkommen | Produkt | über uns</nav>
+</header>
+   <main>
+    <section>
+        <h2>Wir sind die beste</h2>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus alias similique, nostrum reprehenderit repellat ipsam accusamus voluptate incidunt qui quidem magni assumenda vero perspiciatis fugit aperiam deleniti, iusto dicta cupiditate.
+        </p>
+         </section>
+         <section>
+            <h2>unser produkt wir sind die beste</h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus alias similique, nostrum reprehenderit repellat ipsam accusamus voluptate incidunt quidem magni assumenda vero perspiciatis fugit aperiam deleniti, iusto dicta cupiditate.
+            </p>
+         </section>
+        
+        <section>
+            <h2> über uns wir sind die beste</h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus alias similique, nostrum reprehenderit repellat ipsam accusamus voluptate incidunt quidem magni assumenda vero perspiciatis fugit aperiam deleniti, iusto dicta cupiditate.
+            </p>
+         </section>
+   </main>
+   
 </body>
 </html>
