--- a/uns.html
+++ b/uns.html
@@ -12,19 +12,8 @@
     <nav> <a href="index.html"> willkommen </a>|<a href="Produkt.html">Produkt </a>|<a href="uns.html">über uns</a></nav>
 </header>
    <main>
-    <section>
-        <h2>Wir sind die beste</h2>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus alias similique, nostrum reprehenderit repellat ipsam accusamus voluptate incidunt qui quidem magni assumenda vero perspiciatis fugit aperiam deleniti, iusto dicta cupiditate.
-        </p>
-         </section>
-         <section>
-            <h2>unser produkt wir sind die beste</h2>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus alias similique, nostrum reprehenderit repellat ipsam accusamus voluptate incidunt quidem magni assumenda vero perspiciatis fugit aperiam deleniti, iusto dicta cupiditate.
-            </p>
-         </section>
-        
         <section>
-            <h2> über uns wir sind die beste</h2>
+            <h2> über uns</h2>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus alias similique, nostrum reprehenderit repellat ipsam accusamus voluptate incidunt quidem magni assumenda vero perspiciatis fugit aperiam deleniti, iusto dicta cupiditate.
             </p>
          </section>
