--- a/uns.html
+++ b/uns.html
@@ -12,8 +12,14 @@
     <nav> <a href="index.html"> willkommen </a>|<a href="Produkt.html">Produkt </a>|<a href="uns.html">über uns</a></nav>
 </header>
    <main>
+    <h2>wer sind wir</h2>
+    <ul>
+        <li>CEO- Ibrahim</li>
+        <li>schef hasana </li>
+        <li>zweite schef said</li>
+    </ul>
         <section>
-            <h2> über uns</h2>
+            <h4>was bieten wir</h4>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus alias similique, nostrum reprehenderit repellat ipsam accusamus voluptate incidunt quidem magni assumenda vero perspiciatis fugit aperiam deleniti, iusto dicta cupiditate.
             </p>
          </section>
