--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="css/main.css">
     <title>Firma internetseite</title>
 </head>
+<body>
 <header>
     <h1>Firma internetseite</h1>
-    <nav> <a href="index.html"> willkommen </a>|<a href="Produkt.html">Produkt </a>| <a href="über uns.html">über uns</a></nav>
+    <nav> <a href="index.html" class="active"> Start </a>|<a href="Produkt.html"> Produkt </a>|<a href="über uns.html"> über uns </a></nav>
 </header>
    <main>
     <section>
@@ -18,6 +19,5 @@
         </p>
          </section>
    </main>
-   
 </body>
 </html>
