--- a/uns.html
+++ b/uns.html
@@ -9,7 +9,7 @@
 </head>
 <header>
     <h1>Firma internetseite</h1>
-    <nav> <a href="index.html"> willkommen </a>|<a href="Produkt.html">Produkt </a>|<a href="uns.html">über uns</a></nav>
+    <nav> <a href="index.html"> Srart </a>|<a href="Produkt.html"> Produkt </a>|<a href="uns.html" class="active"> über uns</a></nav>
 </header>
    <main>
     <h2>wer sind wir</h2>
