--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 <header>
-    <h1>Firma internetseite</h1>
+    <img src="firmanlogo.png" alt="firma logo">
+    <h5>Firnam internetseite</h5>
     <nav> <a href="index.html" class="active"> Start </a>|<a href="Produkt.html"> Produkt </a>|<a href="über uns.html"> über uns </a></nav>
 </header>
    <main>
