--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
 <header>
-    <img src="firmanlogo.png" alt="firma logo">
-    <h5>Firnam internetseite</h5>
+    <img src="Firman-logo.png" alt="firma logo">
     <nav> <a href="index.html" class="active"> Start </a>|<a href="Produkt.html"> Produkt </a>|<a href="über uns.html"> über uns </a></nav>
 </header>
    <main>
