--- a/index.html
+++ b/index.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Firma internetseite</title>
-</head>
-<body>
-<header>
-    <img src="Firman-logo.png" alt="firma logo">
-    <nav> <a href="index.html" class="active"> Start </a>|<a href="Produkt.html"> Produkt </a>|<a href="über uns.html"> über uns </a></nav>
-</header>
-   <main>
-    <section>
+  </head>
+  <body>
+    <header>
+      <h1>Firma internetseite</h1>
+      <img src="Firman-logo.png" alt="firma logo" />
+      <nav>
+        <a href="index.html" class="active"> Start </a>|<a href="Produkt.html">
+          Produkt </a
+        >|<a href="über uns.html"> über uns </a>
+      </nav>
+    </header>
+    <main>
+      <section>
         <h2>Wir sind die beste</h2>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus alias similique, nostrum reprehenderit repellat ipsam accusamus voluptate incidunt qui quidem magni assumenda vero perspiciatis fugit aperiam deleniti, iusto dicta cupiditate.
+        <p>
+          Als kleine Restaurantfirma bieten wir unseren Kunden ein vielfältiges
+          Angebot für Frühstück, Mittagessen und Nachmittagessen. Unser Ziel ist
+          es, ihre kulinarischen Bedürfnisse zu erfüllen und ihnen eine
+          angenehme gastronomische Erfahrung zu bieten.
         </p>
-         </section>
-   </main>
-</body>
+      </section>
+    </main>
+    <section class="footer_box">
+    <footer>
+        <footer>
+            <img src="/meinprofilephoto.jpg" alt="meinprofilephoto"/>
+            <p>
+              Ich freue mich auf euren Besuch!
+            </p>
+        </footer>
+    </footer>
+</section>
+  </body>
 </html>
