--- a/uns.html
+++ b/uns.html
@@ -8,22 +8,35 @@
     <title>Firma internetseite</title>
 </head>
 <header>
+    <img src="Firman-logo.png" alt="firma logo">
     <h1>Firma internetseite</h1>
     <nav> <a href="index.html"> Srart </a>|<a href="Produkt.html"> Produkt </a>|<a href="uns.html" class="active"> über uns</a></nav>
 </header>
    <main>
     <h2>wer sind wir</h2>
     <ul>
-        <li>CEO- Ibrahim</li>
+
+            <li>CEO- Ibrahim</li>
         <li>schef hasana </li>
         <li>zweite schef said</li>
     </ul>
         <section>
             <h4>was bieten wir</h4>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus alias similique, nostrum reprehenderit repellat ipsam accusamus voluptate incidunt quidem magni assumenda vero perspiciatis fugit aperiam deleniti, iusto dicta cupiditate.
+            <p> 
+                Wir legen großen Wert auf die Verwendung frischer und hochwertiger Zutaten in unseren Gerichten. Unser Team von talentierten Köchen sorgt dafür, dass jedes Gericht mit Sorgfalt und Liebe zum Detail zubereitet wird. Wir berücksichtigen auch die individuellen Ernährungsbedürfnisse unserer Kunden und bieten Optionen für Vegetarier, Veganer und Menschen mit bestimmten Allergien oder Unverträglichkeiten.
             </p>
          </section>
+        
    </main>
-   
+   <section class="footer_box">
+    <footer>
+        <footer>
+            <img src="/meinprofilephoto.jpg" alt="meinprofilephoto"/>
+            <p>
+                Ich freue mich auf euren Besuch!
+            </p>
+        </footer>
+    </footer>
+</section>
 </body>
 </html>
