--- a/Produkt.html
+++ b/Produkt.html
@@ -8,18 +8,39 @@
     <title>Firma internetseite</title>
 </head>
 <header>
+   <img src="Firman-logo.png" alt="firma logo">
     <h1>Firma internetseite</h1>
     <nav> <a href="index.html"> Srart </a>|<a href="Produkt.html" class="active"> Produkt </a>|<a href="uns.html"> über uns </a></nav>
 </header>
    <main>
          </section>
-         <section>
-            <h2>unser produkt angebut für dieses wochenende</h2>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus alias similique, nostrum reprehenderit repellat ipsam accusamus voluptate incidunt quidem magni assumenda vero perspiciatis fugit aperiam deleniti, iusto dicta cupiditate.
-            </p>
-         </section>
         
+            <h2>unser produkt angebut für dieses wochenende</h2>
+
+         <div class="Frühstück">
+            <img src="frühstück.jpg" alt="Frühstück">
+            <p>Für das Frühstück haben wir eine Auswahl an Speisen, die von klassischen Optionen wie Eiern, Speck und Toast bis hin zu gesünderen Alternativen wie frischen Früchten, Müsli und Joghurt reichen. Wir legen Wert auf hochwertige Zutaten und sorgen dafür, dass unsere Frühstücksspeisen frisch zubereitet werden, um den Tag unserer Kunden auf köstliche Weise zu beginnen.</p>
+         </div>
+         <div class="Mittagskarte">
+            <img src="mittagspeise.jpg" alt="mittagspeise">
+           <p>Unsere Mittagskarte bietet eine breite Palette an Optionen, um den unterschiedlichen Vorlieben und Bedürfnissen unserer Kunden gerecht zu werden. Von herzhaften Sandwiches, frischen Salaten und Suppen bis hin zu warmen Hauptgerichten mit Fleisch, Fisch oder vegetarischen Optionen - unsere Gerichte sind sorgfältig zubereitet und bieten eine Kombination aus Geschmack und Nährstoffen.</p>
+         </div>
+
+         <div class="Abendessen">
+         <img src="abendessen.jpg" alt="abendessen">
+        <p>Für den Abendessen bieten wir leichte Snacks, Kaffee und erfrischende Getränke an. Unsere Auswahl umfasst hausgemachte Kuchen, Gebäck, frisches Obst und andere kleine Leckereien, um den Hunger zu stillen und den Gaumen zu verwöhnen. Unsere Kaffeegetränke werden von geschultem Personal zubereitet, um den besten Geschmack und die beste Qualität zu gewährleisten.</p>
+      </div>
+
    </main>
-   
+   <section class="footer_box">
+      <footer>
+          <footer>
+              <img src="/meinprofilephoto.jpg" alt="meinprofilephoto"/>
+              <p>
+                  Ich freue mich auf euren Besuch!
+              </p>
+          </footer>
+      </footer>
+  </section>
 </body>
 </html>
