--- a/Produkt.html
+++ b/Produkt.html
@@ -1,46 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Firma internetseite</title>
-</head>
-<header>
-   <img src="Firman-logo.png" alt="firma logo">
-    <h1>Firma internetseite</h1>
-    <nav> <a href="index.html"> Srart </a>|<a href="Produkt.html" class="active"> Produkt </a>|<a href="uns.html"> über uns </a></nav>
-</header>
-   <main>
-         </section>
-        
-            <h2>unser produkt angebut für dieses wochenende</h2>
+  </head>
+  <body>
+    <header>
+      <img src="Firman-logo.png" alt="firma logo" />
+      <h1>Firma internetseite</h1>
+      <nav>
+        <a href="index.html"> Srart </a>|<a href="Produkt.html" class="active">
+          Produkt </a
+        >|<a href="uns.html"> über uns </a>
+      </nav>
+    </header>
+    <main>
+      <h2>unser produkt angebut für dieses wochenende</h2>
 
-         <div class="Frühstück">
-            <img src="frühstück.jpg" alt="Frühstück">
-            <p>Für das Frühstück haben wir eine Auswahl an Speisen, die von klassischen Optionen wie Eiern, Speck und Toast bis hin zu gesünderen Alternativen wie frischen Früchten, Müsli und Joghurt reichen. Wir legen Wert auf hochwertige Zutaten und sorgen dafür, dass unsere Frühstücksspeisen frisch zubereitet werden, um den Tag unserer Kunden auf köstliche Weise zu beginnen.</p>
-         </div>
-         <div class="Mittagskarte">
-            <img src="mittagspeise.jpg" alt="mittagspeise">
-           <p>Unsere Mittagskarte bietet eine breite Palette an Optionen, um den unterschiedlichen Vorlieben und Bedürfnissen unserer Kunden gerecht zu werden. Von herzhaften Sandwiches, frischen Salaten und Suppen bis hin zu warmen Hauptgerichten mit Fleisch, Fisch oder vegetarischen Optionen - unsere Gerichte sind sorgfältig zubereitet und bieten eine Kombination aus Geschmack und Nährstoffen.</p>
-         </div>
-
-         <div class="Abendessen">
-         <img src="abendessen.jpg" alt="abendessen">
-        <p>Für den Abendessen bieten wir leichte Snacks, Kaffee und erfrischende Getränke an. Unsere Auswahl umfasst hausgemachte Kuchen, Gebäck, frisches Obst und andere kleine Leckereien, um den Hunger zu stillen und den Gaumen zu verwöhnen. Unsere Kaffeegetränke werden von geschultem Personal zubereitet, um den besten Geschmack und die beste Qualität zu gewährleisten.</p>
+      <div class="box">
+        <h2>Frühstück</h2>
+        <p>
+          Für das Frühstück haben wir eine Auswahl an Speisen, die von
+          klassischen Optionen wie Eiern, Speck und Toast bis hin zu gesünderen
+          Alternativen wie frischen Früchten, Müsli und Joghurt reichen. Wir
+          legen Wert auf hochwertige Zutaten und sorgen dafür, dass unsere
+          Frühstücksspeisen frisch zubereitet werden, um den Tag unserer Kunden
+          auf köstliche Weise zu beginnen.
+        </p>
+        <img src="/frühstück.jpg" alt="Frühstück Bild" />
       </div>
 
-   </main>
-   <section class="footer_box">
-      <footer>
-          <footer>
-              <img src="/meinprofilephoto.jpg" alt="meinprofilephoto"/>
-              <p>
-                  Ich freue mich auf euren Besuch!
-              </p>
-          </footer>
-      </footer>
-  </section>
-</body>
+      <div class="box">
+        <h2>Mittagskarte</h2>
+        <p>
+          Unsere Mittagskarte bietet eine breite Palette an Optionen, um den
+          unterschiedlichen Vorlieben und Bedürfnissen unserer Kunden gerecht zu
+          werden. Von herzhaften Sandwiches, frischen Salaten und Suppen bis hin
+          zu warmen Hauptgerichten mit Fleisch, Fisch oder vegetarischen
+          Optionen - unsere Gerichte sind sorgfältig zubereitet und bieten eine
+          Kombination aus Geschmack und Nährstoffen.
+        </p>
+        <img src="/mittagspeise.jpg" alt="Mittagskarte Bild" />
+      </div>
+
+      <div class="box">
+        <h2>Abendessen</h2>
+        <p>
+          Für den Abendessen bieten wir leichte Snacks, Kaffee und erfrischende
+          Getränke an. Unsere Auswahl umfasst hausgemachte Kuchen, Gebäck,
+          frisches Obst und andere kleine Leckereien, um den Hunger zu stillen
+          und den Gaumen zu verwöhnen. Unsere Kaffeegetränke werden von
+          geschultem Personal zubereitet, um den besten Geschmack und die beste
+          Qualität zu gewährleisten.
+        </p>
+        <img src="/abendessen.jpg" alt="Abendessen Bild" />
+      </div>
+    </main>
+    <footer>
+      <img src="/meinprofilephoto.jpg" alt="meinprofilephoto" />
+      <p>Ich freue mich auf euren Besuch!</p>
+    </footer>
+  </body>
 </html>
