--- a/index.html
+++ b/index.html
@@ -28,15 +28,9 @@
         </p>
       </section>
     </main>
-    <section class="footer_box">
-    <footer>
-        <footer>
-            <img src="/meinprofilephoto.jpg" alt="meinprofilephoto"/>
-            <p>
-              Ich freue mich auf euren Besuch!
-            </p>
+      <footer>
+          <img src="/meinprofilephoto.jpg" alt="meinprofilephoto" />
+          <p>Ich freue mich auf euren Besuch!</p>
         </footer>
-    </footer>
-</section>
   </body>
 </html>
