--- a/uns.html
+++ b/uns.html
@@ -1,43 +1,53 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>Firma internetseite</title>
-</head>
-<header>
-    <h1>Firma internetseite</h1>
-    <img src="Firman-logo.png" alt="firma logo">
-    <nav> <a href="index.html"> Srart </a>|<a href="Produkt.html"> Produkt </a>|<a href="uns.html" class="active"> über uns</a></nav>
-</header>
-   <main>
-    <h2>wer sind wir</h2>
-    <ul>
-        <ol>
+  </head>
+  <body>
+    <header>
+      <h1>Firma internetseite</h1>
+      <img src="Firman-logo.png" alt="firma logo" />
+      <nav>
+        <a href="index.html"> Srart </a>|<a href="Produkt.html"> Produkt </a>|<a
+          href="uns.html"
+          class="active"
+        >
+          über uns</a
+        >
+      </nav>
+    </header>
+    <main>
+      <h2>wer sind wir</h2>
+
+      <ol>
         <li>CEO- Ibrahim</li>
-        <li>schef hasana </li>
+        <li>schef hasana</li>
         <li>zweite schef said</li>
-    </ol>
-    </ul>
-        <section>
-            <h4>was bieten wir</h4>
-            <p> 
-                Wir legen großen Wert auf die Verwendung frischer und hochwertiger Zutaten in unseren Gerichten. Unser Team von talentierten Köchen sorgt dafür, dass jedes Gericht mit Sorgfalt und Liebe zum Detail zubereitet wird. Wir berücksichtigen auch die individuellen Ernährungsbedürfnisse unserer Kunden und bieten Optionen für Vegetarier, Veganer und Menschen mit bestimmten Allergien oder Unverträglichkeiten.
-            </p>
-         </section>
-        
-   </main>
-   <section class="footer_box">
-    <footer>
+      </ol>
+
+      <section>
+        <h4>was bieten wir</h4>
+        <p>
+          Wir legen großen Wert auf die Verwendung frischer und hochwertiger
+          Zutaten in unseren Gerichten. Unser Team von talentierten Köchen sorgt
+          dafür, dass jedes Gericht mit Sorgfalt und Liebe zum Detail zubereitet
+          wird. Wir berücksichtigen auch die individuellen Ernährungsbedürfnisse
+          unserer Kunden und bieten Optionen für Vegetarier, Veganer und
+          Menschen mit bestimmten Allergien oder Unverträglichkeiten.
+        </p>
+      </section>
+    </main>
+    <section class="footer_box">
+      <footer>
         <footer>
-            <img src="/meinprofilephoto.jpg" alt="meinprofilephoto"/>
-            <p>
-                Ich freue mich auf euren Besuch!
-            </p>
+          <img src="/meinprofilephoto.jpg" alt="meinprofilephoto" />
+          <p>Ich freue mich auf euren Besuch!</p>
         </footer>
-    </footer>
-</section>
-</body>
+      </footer>
+    </section>
+  </body>
 </html>
