--- a/Produkt.html
+++ b/Produkt.html
@@ -9,13 +9,15 @@
   </head>
   <body>
     <header>
-      <img src="Firman-logo.png" alt="firma logo" />
       <h1>Firma internetseite</h1>
+      <div class="nave_menu">
+        <img src="Firman-logo.png" alt="firma logo" />
       <nav>
         <a href="index.html"> Srart </a>|<a href="Produkt.html" class="active">
           Produkt </a
         >|<a href="uns.html"> über uns </a>
       </nav>
+    </div>
     </header>
     <main>
       <h2>unser produkt angebut für dieses wochenende</h2>
