--- a/uns.html
+++ b/uns.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <header>
-      <img src="Firman-logo.png" alt="firma logo" />
       <h1>Firma internetseite</h1>
-    
+      <div class="nave_menu">
+        <img src="Firman-logo.png" alt="firma logo" />
       <nav>
         <a href="index.html"> Srart </a>|<a href="Produkt.html"> Produkt </a>|<a
           href="uns.html"
@@ -20,6 +20,7 @@
           über uns</a
         >
       </nav>
+    </div>
     </header>
     <main>
       <h2>wer sind wir</h2>
