--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
   </head>
   <body>
     <header>
-      <img src="Firman-logo.png" alt="firma logo" />
       <h1>Firma internetseite</h1>
+      <div class="nave_menu">
+        <img src="Firman-logo.png" alt="firma logo" />
+
       <nav>
         <a href="index.html" class="active"> Start </a>|<a href="Produkt.html">
           Produkt </a
         >|<a href="über uns.html"> über uns </a>
       </nav>
+    </div>
     </header>
     <main>
       <section>
@@ -26,6 +29,9 @@
           es, ihre kulinarischen Bedürfnisse zu erfüllen und ihnen eine
           angenehme gastronomische Erfahrung zu bieten.
         </p>
+        <video controls>
+          <source src="video-preview.mp4" type="video/mp4">
+        </video>
       </section>
     </main>
       <footer>
