--- a/produkt.html
+++ b/produkt.html
@@ -12,12 +12,14 @@
       <h1>Firma internetseite</h1>
       <div class="nave_menu">
         <img src="Firman-logo.png" alt="firma logo" />
-      <nav>
-        <a href="index.html"> Srart </a>|<a href="Produkt.html" class="active">
-          Produkt </a
-        >|<a href="uns.html"> über uns </a>
-      </nav>
-    </div>
+        <nav>
+          <ul>
+            <li> <a href="index.html"> Start </a></li>
+            <li> <a href="produkt.html" class="active"> Produkt </a></li>
+            <li> <a href="uns.html"> über uns </a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <h2>unser produkt angebut für dieses wochenende</h2>
