--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
       <h1>Firma internetseite</h1>
       <div class="nave_menu">
         <img src="Firman-logo.png" alt="firma logo" />
-
-      <nav>
-        <a href="index.html" class="active"> Start </a>|<a href="Produkt.html">
-          Produkt </a
-        >|<a href="über uns.html"> über uns </a>
-      </nav>
-    </div>
+        <img src="/menu.svg" alt="menu-icon" class="borger_menu"/>
+        <nav>
+          <ul>
+            <li> <a href="index.html" class="active"> Start </a></li>
+            <li> <a href="produkt.html"> Produkt </a></li>
+            <li> <a href="uns.html"> über uns </a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <section>
@@ -30,13 +32,13 @@
           angenehme gastronomische Erfahrung zu bieten.
         </p>
         <video controls>
-          <source src="video-preview.mp4" type="video/mp4">
+          <source src="video-preview.mp4" type="video/mp4" />
         </video>
       </section>
     </main>
-      <footer>
-          <img src="/meinprofilephoto.jpg" alt="meinprofilephoto" />
-          <p>Ich freue mich auf euren Besuch!</p>
-        </footer>
+    <footer>
+      <img src="/meinprofilephoto.jpg" alt="meinprofilephoto" />
+      <p>Ich freue mich auf euren Besuch!</p>
+    </footer>
   </body>
 </html>
