--- a/uns.html
+++ b/uns.html
@@ -12,15 +12,14 @@
       <h1>Firma internetseite</h1>
       <div class="nave_menu">
         <img src="Firman-logo.png" alt="firma logo" />
-      <nav>
-        <a href="index.html"> Srart </a>|<a href="Produkt.html"> Produkt </a>|<a
-          href="uns.html"
-          class="active"
-        >
-          über uns</a
-        >
-      </nav>
-    </div>
+        <nav>
+          <ul>
+            <li> <a href="index.html"> Start </a></li>
+            <li> <a href="produkt.html"> Produkt </a></li>
+            <li> <a href="uns.html" class="active"> über uns </a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <h2>wer sind wir</h2>
