--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </section>
     </main>
     <footer>
-      <img src="/meinprofilephoto.jpg" alt="meinprofilephoto" />
+      <img src="meinprofilephoto.jpg" alt="meinprofilephoto" />
       <p>Ich freue mich auf euren Besuch!</p>
     </footer>
   </body>
